--- a/src/main/webapp/css/cfLogin.css
+++ b/src/main/webapp/css/cfLogin.css
@@ -6,6 +6,10 @@
     font-style: normal;
     font-size: 50px;
 }
+a {
+  color: black;
+  text-decoration: none;
+}
 /* GNB */
 .div, .div * {
 	box-sizing: border-box;
