--- a/src/main/webapp/css/cfRecipe.css
+++ b/src/main/webapp/css/cfRecipe.css
@@ -12,6 +12,7 @@
 body{
 	font-family: 'HakgyoansimByeoljariTTF-B',
 	sans-serif !important;
+	margin: 0 10% !important;
 }
 .recipe-img {
 	width: 400px;
