--- a/src/main/webapp/css/cfSearchRecipe.css
+++ b/src/main/webapp/css/cfSearchRecipe.css
@@ -11,6 +11,7 @@ body{
 	display:block !important;
 	font-family: 'HakgyoansimByeoljariTTF-B',
 	sans-serif !important;
+	margin: 0 10% !important;
 }
 
 
