--- a/src/main/webapp/css/cfMyPageUpdate.css
+++ b/src/main/webapp/css/cfMyPageUpdate.css
@@ -149,7 +149,6 @@ body {
     width: 100%;
     height: 100%; /* 최신 코드 반영 */
     display: flex;
-    text-align: center;
     align-items: center;
 }
 
@@ -183,7 +182,11 @@ body {
     font-size: 25px;
 }
 .myPage-container input {
-	margin:0;	
+	margin:0;
+	
+}
+.userAlgCode{
+	width:40% !important;	
 }
 .body {
     display: flex;
