회원 가입,챗봇,레시피 등록페이지 수정

--- a/src/main/webapp/css/cfJoinform.css
+++ b/src/main/webapp/css/cfJoinform.css
@@ -63,6 +63,13 @@ body{
   .gnb-right a {
     margin-left: 6px;
   }
+  body{
+  	margin: 0 !important;
+  }
+  .join-container {
+	width: 100% !important;
+		
+}
 }
 
 
