모바일 창 메인 container추가

--- a/src/main/webapp/css/cfMain.css
+++ b/src/main/webapp/css/cfMain.css
@@ -82,6 +82,10 @@ body{
 	.gnb-right a {
 		margin-left: 6px;
 	}
+	.container {
+    	padding: 0 !important;
+	    		
+    }
 }
 /* Hero Section */
 .hero {
