--- a/src/main/webapp/css/cfSearchRecipe.css
+++ b/src/main/webapp/css/cfSearchRecipe.css
@@ -19,16 +19,18 @@ body{
 /* ----------------------------------------------------------------모바일 대응--------------------------------------------------------------- */
 @media ( max-width : 768px) {
 	.gnb {
-		padding: 12px;
+		padding: 12px 0 !important;
 		gap: 8px;
 	}
 	.gnb-right a {
 		margin-left: 6px;
 	}
 	.gpt-modal-content {
-    	padding: 0 !important;
     	width: 90% !important;
     		
+    }
+    body{
+    	margin:0 !important;
     }
 }
 /*---------------------------------------------------------------테스트용 추가.--------------------------------------------------------------*/
